@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -231,12 +231,6 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
     private static String[] STR_ARRAY = new String[0];
 
     /**
-     * Deprecated, unsupported hack - actually invokes a bug!
-     * Left in for a customer, don't remove.
-     */
-    private boolean usePlatformFontMetrics = false;
-
-    /**
      * Returns the global SunFontManager instance. This is similar to
      * {@link FontManagerFactory#getInstance()} but it returns a
      * SunFontManager instance instead. This is only used in internal classes
@@ -265,6 +259,11 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
     private static int maxSoftRefCnt = 10;
 
     static {
+        initStatic();
+    }
+
+    @SuppressWarnings("removal")
+    private static void initStatic() {
         AccessController.doPrivileged(new PrivilegedAction<Void>() {
             public Void run() {
                 FontManagerNativeLibrary.load();
@@ -305,6 +304,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
     /* Initialise ptrs used by JNI methods */
     private static native void initIDs();
 
+    @SuppressWarnings("removal")
     protected SunFontManager() {
         AccessController.doPrivileged(new PrivilegedAction<Void>() {
             public Void run() {
@@ -448,22 +448,6 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
             }
         });
 
-        boolean platformFont = AccessController.doPrivileged(
-            new PrivilegedAction<Boolean>() {
-                    public Boolean run() {
-                        String prop = System.getProperty("java2d.font.usePlatformFont");
-                        String env = System.getenv("JAVA2D_USEPLATFORMFONT");
-                        return "true".equals(prop) || env != null;
-                    }
-            });
-
-        if (platformFont) {
-            usePlatformFontMetrics = true;
-            System.out.println("Enabling platform font metrics for win32. This is an unsupported option.");
-            System.out.println("This yields incorrect composite font metrics as reported by 1.1.x releases.");
-            System.out.println("It is appropriate only for use by applications which do not use any Java 2");
-            System.out.println("functionality. This property will be removed in a later release.");
-        }
     }
 
     public Font2DHandle getNewComposite(String family, int style,
@@ -1111,6 +1095,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
 
     private boolean haveCheckedUnreferencedFontFiles;
 
+    @SuppressWarnings("removal")
     private String[] getFontFilesFromPath(boolean noType1) {
         final FilenameFilter filter;
         if (noType1) {
@@ -1445,6 +1430,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
         return new HashMap<>(0);
     }
 
+    @SuppressWarnings("removal")
     Font2D findFontFromPlatformMap(String lcName, int style) {
         HashMap<String, FamilyDescription> platformFontMap = SunFontManager.platformFontMap;
         if (platformFontMap == null) {
@@ -1738,6 +1724,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
         } else if (pathDirs.length==1) {
             return pathDirs[0] + File.separator + s;
         } else {
+            @SuppressWarnings("removal")
             String path = AccessController.doPrivileged(
                  new PrivilegedAction<String>() {
                      public String run() {
@@ -2179,15 +2166,6 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
         }
     }
 
-    /*
-     * Workaround for apps which are dependent on a font metrics bug
-     * in JDK 1.1. This is an unsupported win32 private setting.
-     * Left in for a customer - do not remove.
-     */
-    public boolean usePlatformFontMetrics() {
-        return usePlatformFontMetrics;
-    }
-
     public int getNumFonts() {
         return physicalFonts.size()+maxCompFont;
     }
@@ -2203,6 +2181,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
 
     private int createdFontCount = 0;
 
+    @SuppressWarnings("removal")
     public Font2D[] createFont2D(File fontFile, int fontFormat, boolean all,
                                  boolean isCopy, CreatedFontTracker tracker)
     throws FontFormatException {
@@ -2951,6 +2930,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
         return fontPath;
     }
 
+    @SuppressWarnings("removal")
     protected void loadFonts() {
         if (discoveredAllFonts) {
             return;
@@ -3068,6 +3048,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
         return defaultFontName;
     }
 
+    @SuppressWarnings("removal")
     public void loadFontFiles() {
         loadFonts();
         if (loadedAllFontFiles) {
@@ -3340,14 +3321,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
                 }
             }
 
-            String[] fontNames = null;
-            if (fontMapNames.size() > 0) {
-                fontNames = new String[fontMapNames.size()];
-                Object [] keyNames = fontMapNames.keySet().toArray();
-                for (int i=0; i < keyNames.length; i++) {
-                    fontNames[i] = (String)keyNames[i];
-                }
-            }
+            String[] fontNames = fontMapNames.keySet().toArray(new String[0]);
             Font[] fonts = new Font[fontNames.length];
             for (int i=0; i < fontNames.length; i++) {
                 fonts[i] = new Font(fontNames[i], Font.PLAIN, 1);
@@ -3416,11 +3390,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
         // Add any native font family names here
         addNativeFontFamilyNames(familyNames, requestedLocale);
 
-        String[] retval =  new String[familyNames.size()];
-        Object [] keyNames = familyNames.keySet().toArray();
-        for (int i=0; i < keyNames.length; i++) {
-            retval[i] = familyNames.get(keyNames[i]);
-        }
+        String[] retval = familyNames.values().toArray(new String[0]);
         if (requestedLocale.equals(Locale.getDefault())) {
             lastDefaultLocale = requestedLocale;
             allFamilies = new String[retval.length];
@@ -3432,6 +3402,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
     // Provides an aperture to add native font family names to the map
     protected void addNativeFontFamilyNames(TreeMap<String, String> familyNames, Locale requestedLocale) { }
 
+    @SuppressWarnings("removal")
     public void register1dot0Fonts() {
         AccessController.doPrivileged(new PrivilegedAction<Void>() {
             public Void run() {
@@ -3471,6 +3442,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
      * on windows and uses that if set.
      */
     private static Locale systemLocale = null;
+    @SuppressWarnings("removal")
     private static Locale getSystemStartupLocale() {
         if (systemLocale == null) {
             systemLocale = AccessController.doPrivileged(new PrivilegedAction<Locale>() {
@@ -3494,7 +3466,7 @@ public abstract class SunFontManager implements FontSupport, FontManagerForSGE {
                     String language = System.getProperty("user.language", "en");
                     String country  = System.getProperty("user.country","");
                     String variant  = System.getProperty("user.variant","");
-                    return new Locale(language, country, variant);
+                    return Locale.of(language, country, variant);
                 }
             });
         }
