@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -49,6 +49,7 @@ import javax.lang.model.element.Modifier;
 import com.sun.tools.javac.util.Assert;
 import com.sun.tools.javac.util.StringUtils;
 
+@SuppressWarnings("serial") // Types of instance fields are not Serializable
 public class PubApi implements Serializable {
 
     private static final long serialVersionUID = 5926627347801986850L;
@@ -272,11 +273,11 @@ public class PubApi implements Serializable {
     private static List<TypeDesc> parseTypeDescs(List<String> strs) {
         return strs.stream()
                    .map(TypeDesc::decodeString)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     private static List<PubApiTypeParam> parseTypeParams(List<String> strs) {
-        return strs.stream().map(PubApi::parseTypeParam).collect(Collectors.toList());
+        return strs.stream().map(PubApi::parseTypeParam).toList();
     }
 
     // Parse a type parameter string. Example input:
