@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,27 +37,35 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocletConstants;
 import jdk.javadoc.internal.doclets.toolkit.util.Utils;
 
 import javax.lang.model.element.Element;
+import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.Modifier;
 import javax.lang.model.element.ModuleElement;
 import javax.lang.model.element.PackageElement;
 import javax.lang.model.element.RecordComponentElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.type.TypeMirror;
+import javax.lang.model.util.ElementKindVisitor14;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
+import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.stream.Collectors;
 
 import static javax.lang.model.element.Modifier.ABSTRACT;
+import static javax.lang.model.element.Modifier.FINAL;
 import static javax.lang.model.element.Modifier.NATIVE;
+import static javax.lang.model.element.Modifier.PRIVATE;
+import static javax.lang.model.element.Modifier.PROTECTED;
 import static javax.lang.model.element.Modifier.PUBLIC;
+import static javax.lang.model.element.Modifier.STATIC;
 import static javax.lang.model.element.Modifier.STRICTFP;
 import static javax.lang.model.element.Modifier.SYNCHRONIZED;
 
 public class Signatures {
 
     public static Content getModuleSignature(ModuleElement mdle, ModuleWriterImpl moduleWriter) {
-        Content signature = HtmlTree.DIV(HtmlStyle.moduleSignature);
+        var signature = HtmlTree.DIV(HtmlStyle.moduleSignature);
         Content annotations = moduleWriter.getAnnotationInfo(mdle, true);
         if (!annotations.isEmpty()) {
             signature.add(HtmlTree.SPAN(HtmlStyle.annotations, annotations));
@@ -67,7 +75,7 @@ public class Signatures {
                 ? "open module" : "module";
         signature.add(label);
         signature.add(" ");
-        HtmlTree nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
+        var nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
         nameSpan.add(mdle.getQualifiedName().toString());
         signature.add(nameSpan);
         return signature;
@@ -77,13 +85,13 @@ public class Signatures {
         if (pkg.isUnnamed()) {
             return Text.EMPTY;
         }
-        Content signature = HtmlTree.DIV(HtmlStyle.packageSignature);
+        var signature = HtmlTree.DIV(HtmlStyle.packageSignature);
         Content annotations = pkgWriter.getAnnotationInfo(pkg, true);
         if (!annotations.isEmpty()) {
             signature.add(HtmlTree.SPAN(HtmlStyle.annotations, annotations));
         }
         signature.add("package ");
-        HtmlTree nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
+        var nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
         nameSpan.add(pkg.getQualifiedName().toString());
         signature.add(nameSpan);
         return signature;
@@ -92,36 +100,38 @@ public class Signatures {
     static class TypeSignature {
 
         private final TypeElement typeElement;
-        private final ClassWriterImpl classWriter;
+        private final HtmlDocletWriter writer;
         private final Utils utils;
         private final HtmlConfiguration configuration;
         private Content modifiers;
 
-        TypeSignature(TypeElement typeElement, ClassWriterImpl classWriter) {
-            this.typeElement = typeElement;
-            this.classWriter = classWriter;
-            this.utils = classWriter.utils;
-            this.configuration = classWriter.configuration;
-        }
+        private static final Set<String> previewModifiers = Set.of();
+
+         TypeSignature(TypeElement typeElement, HtmlDocletWriter writer) {
+             this.typeElement = typeElement;
+             this.writer = writer;
+             this.utils = writer.utils;
+             this.configuration = writer.configuration;
+             this.modifiers = markPreviewModifiers(getModifiers());
+         }
 
         public TypeSignature setModifiers(Content modifiers) {
             this.modifiers = modifiers;
             return this;
         }
 
-        @SuppressWarnings("preview")
         public Content toContent() {
             Content content = new ContentBuilder();
-            Content annotationInfo = classWriter.getAnnotationInfo(typeElement, true);
+            Content annotationInfo = writer.getAnnotationInfo(typeElement, true);
             if (!annotationInfo.isEmpty()) {
                 content.add(HtmlTree.SPAN(HtmlStyle.annotations, annotationInfo));
             }
             content.add(HtmlTree.SPAN(HtmlStyle.modifiers, modifiers));
 
-            HtmlTree nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
+            var nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
             Content className = Text.of(utils.getSimpleName(typeElement));
-            if (classWriter.options.linkSource()) {
-                classWriter.addSrcLink(typeElement, className, nameSpan);
+            if (configuration.getOptions().linkSource()) {
+                writer.addSrcLink(typeElement, className, nameSpan);
             } else {
                 nameSpan.addStyle(HtmlStyle.typeNameLabel).add(className);
             }
@@ -129,21 +139,21 @@ public class Signatures {
                     HtmlLinkInfo.Kind.CLASS_SIGNATURE, typeElement);
             //Let's not link to ourselves in the signature.
             linkInfo.linkToSelf = false;
-            nameSpan.add(classWriter.getTypeParameterLinks(linkInfo));
+            nameSpan.add(writer.getTypeParameterLinks(linkInfo));
             content.add(nameSpan);
 
             if (utils.isRecord(typeElement)) {
                 content.add(getRecordComponents());
             }
-            if (!utils.isAnnotationType(typeElement)) {
-                Content extendsImplements = new HtmlTree(TagName.SPAN)
+            if (!utils.isAnnotationInterface(typeElement)) {
+                var extendsImplements = new HtmlTree(TagName.SPAN)
                         .setStyle(HtmlStyle.extendsImplements);
-                if (!utils.isInterface(typeElement)) {
+                if (!utils.isPlainInterface(typeElement)) {
                     TypeMirror superclass = utils.getFirstVisibleSuperClass(typeElement);
                     if (superclass != null) {
                         content.add(DocletConstants.NL);
                         extendsImplements.add("extends ");
-                        Content link = classWriter.getLink(new HtmlLinkInfo(configuration,
+                        Content link = writer.getLink(new HtmlLinkInfo(configuration,
                                 HtmlLinkInfo.Kind.CLASS_SIGNATURE_PARENT_NAME,
                                 superclass));
                         extendsImplements.add(link);
@@ -159,12 +169,12 @@ public class Signatures {
                         }
                         if (isFirst) {
                             extendsImplements.add(DocletConstants.NL);
-                            extendsImplements.add(utils.isInterface(typeElement) ? "extends " : "implements ");
+                            extendsImplements.add(utils.isPlainInterface(typeElement) ? "extends " : "implements ");
                             isFirst = false;
                         } else {
                             extendsImplements.add(", ");
                         }
-                        Content link = classWriter.getLink(new HtmlLinkInfo(configuration,
+                        Content link = writer.getLink(new HtmlLinkInfo(configuration,
                                 HtmlLinkInfo.Kind.CLASS_SIGNATURE_PARENT_NAME,
                                 type));
                         extendsImplements.add(link);
@@ -177,30 +187,26 @@ public class Signatures {
             List<? extends TypeMirror> permits = typeElement.getPermittedSubclasses();
             List<? extends TypeMirror> linkablePermits = permits.stream()
                     .filter(t -> utils.isLinkable(utils.asTypeElement(t)))
-                    .collect(Collectors.toList());
+                    .toList();
             if (!linkablePermits.isEmpty()) {
-                Content permitsSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.permits);
+                var permitsSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.permits);
                 boolean isFirst = true;
                 for (TypeMirror type : linkablePermits) {
                     if (isFirst) {
                         content.add(DocletConstants.NL);
                         permitsSpan.add("permits");
-                        Content link =
-                                classWriter.links.createLink(classWriter.htmlIds.forPreviewSection(typeElement),
-                                                             classWriter.contents.previewMark);
-                        permitsSpan.add(HtmlTree.SUP(link));
                         permitsSpan.add(" ");
                         isFirst = false;
                     } else {
                         permitsSpan.add(", ");
                     }
-                    Content link = classWriter.getLink(new HtmlLinkInfo(configuration,
+                    Content link = writer.getLink(new HtmlLinkInfo(configuration,
                             HtmlLinkInfo.Kind.PERMITTED_SUBCLASSES,
                             type));
                     permitsSpan.add(link);
                 }
                 if (linkablePermits.size() < permits.size()) {
-                    Content c = Text.of(classWriter.resources.getText("doclet.not.exhaustive"));
+                    Content c = Text.of(configuration.getDocResources().getText("doclet.not.exhaustive"));
                     permitsSpan.add(" ");
                     permitsSpan.add(HtmlTree.SPAN(HtmlStyle.permitsNote, c));
                 }
@@ -209,16 +215,15 @@ public class Signatures {
             return HtmlTree.DIV(HtmlStyle.typeSignature, content);
         }
 
-        @SuppressWarnings("preview")
         private Content getRecordComponents() {
             Content content = new ContentBuilder();
             content.add("(");
             String sep = "";
             for (RecordComponentElement e : typeElement.getRecordComponents()) {
                 content.add(sep);
-                classWriter.getAnnotations(e.getAnnotationMirrors(), false)
+                writer.getAnnotations(e.getAnnotationMirrors(), false)
                         .forEach(a -> { content.add(a).add(" "); });
-                Content link = classWriter.getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.RECORD_COMPONENT,
+                Content link = writer.getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.RECORD_COMPONENT,
                         e.asType()));
                 content.add(link);
                 content.add(Entity.NO_BREAK_SPACE);
@@ -227,6 +232,112 @@ public class Signatures {
             }
             content.add(")");
             return content;
+        }
+
+        private Content markPreviewModifiers(List<String> modifiers) {
+             Content content = new ContentBuilder();
+             String sep = null;
+             for (String modifier : modifiers) {
+                 if (sep != null) {
+                    content.add(sep);
+                 }
+                 content.add(modifier);
+                 if (previewModifiers.contains(modifier)) {
+                     content.add(HtmlTree.SUP(writer.links.createLink(
+                             configuration.htmlIds.forPreviewSection(typeElement),
+                             configuration.contents.previewMark)));
+                 }
+                 sep = " ";
+             }
+             content.add(" ");
+             return content;
+        }
+
+        private List<String> getModifiers() {
+            SortedSet<Modifier> modifiers = new TreeSet<>(typeElement.getModifiers());
+            modifiers.remove(NATIVE);
+            modifiers.remove(STRICTFP);
+            modifiers.remove(SYNCHRONIZED);
+
+            return new ElementKindVisitor14<List<String>, SortedSet<Modifier>>() {
+                final List<String> list = new ArrayList<>();
+
+                void addVisibilityModifier(Set<Modifier> modifiers) {
+                    if (modifiers.contains(PUBLIC)) {
+                        list.add("public");
+                    } else if (modifiers.contains(PROTECTED)) {
+                        list.add("protected");
+                    } else if (modifiers.contains(PRIVATE)) {
+                        list.add("private");
+                    }
+                }
+
+                void addStatic(Set<Modifier> modifiers) {
+                    if (modifiers.contains(STATIC)) {
+                        list.add("static");
+                    }
+                }
+
+                void addSealed(TypeElement e) {
+                    if (e.getModifiers().contains(Modifier.SEALED)) {
+                        list.add("sealed");
+                    } else if (e.getModifiers().contains(Modifier.NON_SEALED)) {
+                        list.add("non-sealed");
+                    }
+                }
+
+                void addModifiers(Set<Modifier> modifiers) {
+                    modifiers.stream()
+                            .map(Modifier::toString)
+                            .forEachOrdered(list::add);
+                }
+
+                @Override
+                public List<String> visitTypeAsInterface(TypeElement e, SortedSet<Modifier> mods) {
+                    addVisibilityModifier(mods);
+                    addStatic(mods);
+                    addSealed(e);
+                    list.add("interface");
+                    return list;
+                }
+
+                @Override
+                public List<String> visitTypeAsEnum(TypeElement e, SortedSet<Modifier> mods) {
+                    addVisibilityModifier(mods);
+                    addStatic(mods);
+                    list.add("enum");
+                    return list;
+                }
+
+                @Override
+                public List<String> visitTypeAsAnnotationType(TypeElement e, SortedSet<Modifier> mods) {
+                    addVisibilityModifier(mods);
+                    addStatic(mods);
+                    list.add("@interface");
+                    return list;
+                }
+
+                @Override
+                public List<String> visitTypeAsRecord(TypeElement e, SortedSet<Modifier> mods) {
+                    mods.remove(FINAL); // suppress the implicit `final`
+                    return visitTypeAsClass(e, mods);
+                }
+
+                @Override
+                public List<String> visitTypeAsClass(TypeElement e, SortedSet<Modifier> mods) {
+                    addModifiers(mods);
+                    String keyword = e.getKind() == ElementKind.RECORD ? "record" : "class";
+                    list.add(keyword);
+                    return list;
+                }
+
+                @Override
+                protected List<String> defaultAction(Element e, SortedSet<Modifier> mods) {
+                    addModifiers(mods);
+                    return list;
+                }
+
+            }.visit(typeElement, modifiers);
         }
     }
 
@@ -267,7 +378,7 @@ public class Signatures {
         /**
          * Set the type parameters for an executable member.
          *
-         * @param typeParameters the content tree containing the type parameters to add.
+         * @param typeParameters the type parameters to add.
          * @return this instance
          */
         MemberSignature setTypeParameters(Content typeParameters) {
@@ -278,7 +389,7 @@ public class Signatures {
         /**
          * Set the return type for an executable member.
          *
-         * @param returnType the content tree containing the return type to add.
+         * @param returnType the return type to add.
          * @return this instance
          */
         MemberSignature setReturnType(Content returnType) {
@@ -300,33 +411,33 @@ public class Signatures {
         /**
          * Set the parameter information of an executable member.
          *
-         * @param paramTree the content tree containing the parameter information.
+         * @param content the parameter information.
          * @return this instance
          */
-        MemberSignature setParameters(Content paramTree) {
-            this.parameters = paramTree;
+        MemberSignature setParameters(Content content) {
+            this.parameters = content;
             return this;
         }
 
         /**
          * Set the exception information of an executable member.
          *
-         * @param exceptionTree the content tree containing the exception information
+         * @param content the exception information
          * @return this instance
          */
-        MemberSignature setExceptions(Content exceptionTree) {
-            this.exceptions = exceptionTree;
+        MemberSignature setExceptions(Content content) {
+            this.exceptions = content;
             return this;
         }
 
         /**
          * Set the annotation information of a member.
          *
-         * @param annotationTree the content tree containing the exception information
+         * @param content the exception information
          * @return this instance
          */
-        MemberSignature setAnnotations(Content annotationTree) {
-            this.annotations = annotationTree;
+        MemberSignature setAnnotations(Content content) {
+            this.annotations = content;
             return this;
         }
 
@@ -361,7 +472,7 @@ public class Signatures {
             }
 
             // Name
-            HtmlTree nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
+            var nameSpan = new HtmlTree(TagName.SPAN).setStyle(HtmlStyle.elementName);
             if (memberWriter.options.linkSource()) {
                 Content name = Text.of(memberWriter.name(element));
                 memberWriter.writer.addSrcLink(element, name, nameSpan);
@@ -379,12 +490,12 @@ public class Signatures {
         }
 
         /**
-         * Adds the modifier for the member. The modifiers are ordered as specified
+         * Adds the modifiers for the member. The modifiers are ordered as specified
          * by <em>The Java Language Specification</em>.
          *
-         * @param htmlTree the content tree to which the modifier information will be added
+         * @param target the content to which the modifier information will be added
          */
-        private void appendModifiers(Content htmlTree) {
+        private void appendModifiers(Content target) {
             Set<Modifier> set = new TreeSet<>(element.getModifiers());
 
             // remove the ones we really don't need
@@ -396,7 +507,7 @@ public class Signatures {
             // interface methods and fields.
             if ((utils.isField(element) || utils.isMethod(element))) {
                 Element te = element.getEnclosingElement();
-                if (utils.isInterface(te) || utils.isAnnotationType(te)) {
+                if (utils.isInterface(te)) {
                     // Remove the implicit abstract and public modifiers
                     if (utils.isMethod(element)) {
                         set.remove(ABSTRACT);
@@ -406,7 +517,7 @@ public class Signatures {
             }
             if (!set.isEmpty()) {
                 String mods = set.stream().map(Modifier::toString).collect(Collectors.joining(" "));
-                htmlTree.add(HtmlTree.SPAN(HtmlStyle.modifiers, Text.of(mods)))
+                target.add(HtmlTree.SPAN(HtmlStyle.modifiers, Text.of(mods)))
                         .add(Entity.NO_BREAK_SPACE);
             }
         }
@@ -414,30 +525,30 @@ public class Signatures {
         /**
          * Appends the type parameter information to the HTML tree.
          *
-         * @param htmlTree          the HTML tree
+         * @param target            the HTML tree
          * @param lastLineSeparator index of last line separator in the HTML tree
          * @return the new index of the last line separator
          */
-        private int appendTypeParameters(Content htmlTree, int lastLineSeparator) {
+        private int appendTypeParameters(Content target, int lastLineSeparator) {
             // Apply different wrapping strategies for type parameters
             // depending of combined length of type parameters and return type.
             int typeParamLength = typeParameters.charCount();
 
             if (typeParamLength >= TYPE_PARAMS_MAX_INLINE_LENGTH) {
-                htmlTree.add(HtmlTree.SPAN(HtmlStyle.typeParametersLong, typeParameters));
+                target.add(HtmlTree.SPAN(HtmlStyle.typeParametersLong, typeParameters));
             } else {
-                htmlTree.add(HtmlTree.SPAN(HtmlStyle.typeParameters, typeParameters));
+                target.add(HtmlTree.SPAN(HtmlStyle.typeParameters, typeParameters));
             }
 
-            int lineLength = htmlTree.charCount() - lastLineSeparator;
+            int lineLength = target.charCount() - lastLineSeparator;
             int newLastLineSeparator = lastLineSeparator;
 
             // sum below includes length of modifiers plus type params added above
             if (lineLength + returnType.charCount() > RETURN_TYPE_MAX_LINE_LENGTH) {
-                htmlTree.add(DocletConstants.NL);
-                newLastLineSeparator = htmlTree.charCount();
+                target.add(DocletConstants.NL);
+                newLastLineSeparator = target.charCount();
             } else {
-                htmlTree.add(Entity.NO_BREAK_SPACE);
+                target.add(Entity.NO_BREAK_SPACE);
             }
 
             return newLastLineSeparator;
@@ -446,25 +557,25 @@ public class Signatures {
         /**
          * Appends the parameters and exceptions information to the HTML tree.
          *
-         * @param htmlTree          the HTML tree
+         * @param target            the HTML tree
          * @param lastLineSeparator the index of the last line separator in the HTML tree
          */
-        private void appendParametersAndExceptions(Content htmlTree, int lastLineSeparator) {
+        private void appendParametersAndExceptions(Content target, int lastLineSeparator) {
             // Record current position for indentation of exceptions
-            int indentSize = htmlTree.charCount() - lastLineSeparator;
+            int indentSize = target.charCount() - lastLineSeparator;
 
             if (parameters.charCount() == 2) {
                 // empty parameters are added without packing
-                htmlTree.add(parameters);
+                target.add(parameters);
             } else {
-                htmlTree.add(Entity.ZERO_WIDTH_SPACE)
+                target.add(new HtmlTree(TagName.WBR))
                         .add(HtmlTree.SPAN(HtmlStyle.parameters, parameters));
             }
 
             // Exceptions
             if (exceptions != null && !exceptions.isEmpty()) {
                 CharSequence indent = " ".repeat(Math.max(0, indentSize + 1 - 7));
-                htmlTree.add(DocletConstants.NL)
+                target.add(DocletConstants.NL)
                         .add(indent)
                         .add("throws ")
                         .add(HtmlTree.SPAN(HtmlStyle.exceptions, exceptions));
