@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,6 @@ package jdk.javadoc.internal.doclets.formats.html.markup;
 import java.io.IOException;
 import java.io.Writer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -38,7 +37,7 @@ import jdk.javadoc.internal.doclets.toolkit.Content;
  * A sequence of Content nodes.
  */
 public class ContentBuilder extends Content {
-    protected List<Content> contents = Collections.emptyList();
+    protected List<Content> contents = List.of();
 
     public ContentBuilder() { }
 
@@ -52,8 +51,8 @@ public class ContentBuilder extends Content {
     public ContentBuilder add(Content content) {
         Objects.requireNonNull(content);
         ensureMutableContents();
-        if (content instanceof ContentBuilder) {
-            contents.addAll(((ContentBuilder) content).contents);
+        if (content instanceof ContentBuilder cb) {
+            contents.addAll(cb.contents);
         } else
             contents.add(content);
         return this;
@@ -65,8 +64,8 @@ public class ContentBuilder extends Content {
             ensureMutableContents();
             Content c = contents.isEmpty() ? null : contents.get(contents.size() - 1);
             TextBuilder tb;
-            if (c != null && c instanceof TextBuilder) {
-                tb = (TextBuilder) c;
+            if (c instanceof TextBuilder tbi) {
+                tb = tbi;
             } else {
                 contents.add(tb = new TextBuilder());
             }
@@ -90,6 +89,23 @@ public class ContentBuilder extends Content {
                 return false;
         }
         return true;
+    }
+
+    /**
+     * {@inheritDoc}
+     *
+     * @implSpec
+     * A content builder is valid if any of its content is; thus, it is
+     * valid to be added to an HtmlTree, which checks the validity of
+     * each content in this builder.
+     */
+    @Override
+    public boolean isValid() {
+        for (Content content: contents) {
+            if (content.isValid())
+                return true;
+        }
+        return false;
     }
 
     @Override
