@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,7 +29,6 @@ import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.EnumMap;
 import java.util.EnumSet;
 import java.util.HashSet;
@@ -69,6 +68,7 @@ import static com.sun.source.doctree.DocTree.Kind.EXCEPTION;
 import static com.sun.source.doctree.DocTree.Kind.HIDDEN;
 import static com.sun.source.doctree.DocTree.Kind.LINK;
 import static com.sun.source.doctree.DocTree.Kind.LINK_PLAIN;
+import static com.sun.source.doctree.DocTree.Kind.PARAM;
 import static com.sun.source.doctree.DocTree.Kind.PROVIDES;
 import static com.sun.source.doctree.DocTree.Kind.SEE;
 import static com.sun.source.doctree.DocTree.Kind.SERIAL;
@@ -82,13 +82,7 @@ import static javax.tools.DocumentationTool.Location.TAGLET_PATH;
 
 /**
  * Manages the {@code Taglet}s used by doclets.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
  */
-
 public class TagletManager {
 
     /**
@@ -184,6 +178,8 @@ public class TagletManager {
 
     private final String tagletPath;
 
+    private final BaseConfiguration configuration;
+
     /**
      * Constructs a new {@code TagletManager}.
      *
@@ -196,6 +192,7 @@ public class TagletManager {
         standardTagsLowercase = new HashSet<>();
         unseenCustomTags = new HashSet<>();
         allTaglets = new LinkedHashMap<>();
+        this.configuration = configuration;
         BaseOptions options = configuration.getOptions();
         this.nosince = options.noSince();
         this.showversion = options.showVersion();
@@ -222,8 +219,7 @@ public class TagletManager {
      * @throws IOException if an error occurs while setting the location
      */
     public void initTagletPath(JavaFileManager fileManager) throws IOException {
-        if (fileManager instanceof StandardJavaFileManager) {
-            StandardJavaFileManager sfm = (StandardJavaFileManager)fileManager;
+        if (fileManager instanceof StandardJavaFileManager sfm) {
             if (tagletPath != null) {
                 List<File> paths = new ArrayList<>();
                 for (String pathname : tagletPath.split(File.pathSeparator)) {
@@ -231,7 +227,7 @@ public class TagletManager {
                 }
                 sfm.setLocation(TAGLET_PATH, paths);
             } else if (!sfm.hasLocation(TAGLET_PATH)) {
-                sfm.setLocation(TAGLET_PATH, Collections.emptyList());
+                sfm.setLocation(TAGLET_PATH, List.of());
             }
         } else if (tagletPath != null) {
             messages.error("doclet.not_standard_file_manager");
@@ -247,14 +243,22 @@ public class TagletManager {
      * @param fileManager the file manager to load classes and resources
      */
     public void addCustomTag(String classname, JavaFileManager fileManager) {
+        ClassLoader tagClassLoader = fileManager.getClassLoader(TAGLET_PATH);
+        if (configuration.workArounds.accessInternalAPI()) {
+            Module thisModule = getClass().getModule();
+            Module tagletLoaderUnnamedModule = tagClassLoader.getUnnamedModule();
+            List<String> pkgs = List.of(
+                    "jdk.javadoc.doclet",
+                    "jdk.javadoc.internal.doclets.toolkit",
+                    "jdk.javadoc.internal.doclets.formats.html");
+            pkgs.forEach(p -> thisModule.addOpens(p, tagletLoaderUnnamedModule));
+        }
         try {
-            ClassLoader tagClassLoader;
-            tagClassLoader = fileManager.getClassLoader(TAGLET_PATH);
             Class<? extends jdk.javadoc.doclet.Taglet> customTagClass =
                     tagClassLoader.loadClass(classname).asSubclass(jdk.javadoc.doclet.Taglet.class);
             jdk.javadoc.doclet.Taglet instance = customTagClass.getConstructor().newInstance();
             registerTaglet(instance);
-        } catch (ReflectiveOperationException exc) {
+        } catch (ReflectiveOperationException | ExceptionInInitializerError | ClassCastException exc) {
             messages.error("doclet.Error_taglet_not_registered", exc.getClass().getName(),
                     classname);
         }
@@ -352,7 +356,6 @@ public class TagletManager {
      * @param trees the trees containing the comments
      * @param inlineTrees true if the trees are inline and false otherwise
      */
-    @SuppressWarnings("preview")
     public void checkTags(Element element, Iterable<? extends DocTree> trees, boolean inlineTrees) {
         if (trees == null) {
             return;
@@ -552,8 +555,7 @@ public class TagletManager {
             case PACKAGE:
                 return blockTagletsByLocation.get(Location.PACKAGE);
             case OTHER:
-                if (e instanceof DocletElement) {
-                    DocletElement de = (DocletElement) e;
+                if (e instanceof DocletElement de) {
                     switch (de.getSubKind()) {
                         case DOCFILE:
                             return blockTagletsByLocation.get(Location.PACKAGE);
@@ -594,6 +596,7 @@ public class TagletManager {
         // init the serialized form tags for the serialized form page
         serializedFormTags = new ArrayList<>();
         serializedFormTags.add(allTaglets.get(SERIAL_DATA.tagName));
+        serializedFormTags.add(allTaglets.get(PARAM.tagName));
         serializedFormTags.add(allTaglets.get(THROWS.tagName));
         if (!nosince)
             serializedFormTags.add(allTaglets.get(SINCE.tagName));
@@ -644,6 +647,7 @@ public class TagletManager {
         addStandardTaglet(new ValueTaglet());
         addStandardTaglet(new LiteralTaglet());
         addStandardTaglet(new CodeTaglet());
+        addStandardTaglet(new SnippetTaglet());
         addStandardTaglet(new IndexTaglet());
         addStandardTaglet(new SummaryTaglet());
         addStandardTaglet(new SystemPropertyTaglet());
@@ -751,7 +755,7 @@ public class TagletManager {
                     + format(t.inMethod(), "method") + " "
                     + format(t.inField(), "field") + " "
                     + format(t.isInlineTag(), "inline")+ " "
-                    + format((t instanceof SimpleTaglet) && !((SimpleTaglet) t).enabled, "disabled"));
+                    + format((t instanceof SimpleTaglet st) && !st.enabled, "disabled"));
         });
     }
 
