@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,6 +30,7 @@ import java.security.Permission;
 /**
  * @test
  * @bug 8078165
+ * @run main/othervm -Djava.security.manager=allow bug8078165
  * @summary NPE when attempting to get image from toolkit
  * @author Anton Nashatyrev
  */
