@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@
  * @bug 6622002
  * @author Alexander Potochkin
  * @summary UIDefault.ProxyLazyValue has unsafe reflection usage
- * @run main/othervm bug6622002
+ * @run main/othervm -Djava.security.manager=allow bug6622002
  */
 
 import javax.swing.*;
