@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -42,10 +42,23 @@ import jdk.jpackage.internal.IOUtils;
 import jdk.jpackage.test.PackageTest.PackageHandlers;
 
 
+public final class LinuxHelper {
+    private static String getReleaseSuffix(JPackageCommand cmd) {
+        String value = null;
+        final PackageType packageType = cmd.packageType();
+        switch (packageType) {
+            case LINUX_DEB:
+                value = Optional.ofNullable(cmd.getArgumentValue(
+                        "--linux-app-release", () -> null)).map(v -> "-" + v).orElse(
+                        "");
+                break;
 
-public class LinuxHelper {
-    private static String getRelease(JPackageCommand cmd) {
-        return cmd.getArgumentValue("--linux-app-release", () -> "1");
+            case LINUX_RPM:
+                value = "-" + cmd.getArgumentValue("--linux-app-release",
+                        () -> "1");
+                break;
+        }
+        return value;
     }
 
     public static String getPackageName(JPackageCommand cmd) {
@@ -74,18 +87,18 @@ public class LinuxHelper {
         String format = null;
         switch (packageType) {
             case LINUX_DEB:
-                format = "%s_%s-%s_%s";
+                format = "%s_%s%s_%s";
                 break;
 
             case LINUX_RPM:
-                format = "%s-%s-%s.%s";
+                format = "%s-%s%s.%s";
                 break;
         }
 
-        final String release = getRelease(cmd);
+        final String releaseSuffix = getReleaseSuffix(cmd);
         final String version = cmd.version();
 
-        return String.format(format, getPackageName(cmd), version, release,
+        return String.format(format, getPackageName(cmd), version, releaseSuffix,
                 getDefaultPackageArch(packageType)) + packageType.getSuffix();
     }
 
@@ -169,7 +182,10 @@ public class LinuxHelper {
         };
         deb.uninstallHandler = cmd -> {
             cmd.verifyIsOfType(PackageType.LINUX_DEB);
-            Executor.of("sudo", "dpkg", "-r", getPackageName(cmd)).execute();
+            var packageName = getPackageName(cmd);
+            String script = String.format("! dpkg -s %s || sudo dpkg -r %s",
+                    packageName, packageName);
+            Executor.of("sh", "-c", script).execute();
         };
         deb.unpackHandler = (cmd, destinationDir) -> {
             cmd.verifyIsOfType(PackageType.LINUX_DEB);
@@ -186,13 +202,16 @@ public class LinuxHelper {
         PackageHandlers rpm = new PackageHandlers();
         rpm.installHandler = cmd -> {
             cmd.verifyIsOfType(PackageType.LINUX_RPM);
-            Executor.of("sudo", "rpm", "-i")
+            Executor.of("sudo", "rpm", "-U")
             .addArgument(cmd.outputBundle())
             .execute();
         };
         rpm.uninstallHandler = cmd -> {
             cmd.verifyIsOfType(PackageType.LINUX_RPM);
-            Executor.of("sudo", "rpm", "-e", getPackageName(cmd)).execute();
+            var packageName = getPackageName(cmd);
+            String script = String.format("! rpm -q %s || sudo rpm -e %s",
+                    packageName, packageName);
+            Executor.of("sh", "-c", script).execute();
         };
         rpm.unpackHandler = (cmd, destinationDir) -> {
             cmd.verifyIsOfType(PackageType.LINUX_RPM);
@@ -282,8 +301,8 @@ public class LinuxHelper {
                     actualCriticalRuntimePaths);
         } else {
             // AppImagePackageTest.testEmpty() will have no dependencies,
-            // but will have more then 0 and less than 1K content size.
-            checkPrerequisites = packageSize > 1;
+            // but will have more then 0 and less than 5K content size when --icon is used.
+            checkPrerequisites = packageSize > 5;
         }
 
         List<String> prerequisites = LinuxHelper.getPrerequisitePackages(cmd);
@@ -349,10 +368,10 @@ public class LinuxHelper {
 
         test.addInstallVerifier(cmd -> {
             // Verify .desktop files.
-            try (var files = Files.walk(cmd.appLayout().destktopIntegrationDirectory(), 1)) {
+            try (var files = Files.list(cmd.appLayout().destktopIntegrationDirectory())) {
                 List<Path> desktopFiles = files
                         .filter(path -> path.getFileName().toString().endsWith(".desktop"))
-                        .collect(Collectors.toList());
+                        .toList();
                 if (!integrated) {
                     TKit.assertStringListEquals(List.of(),
                             desktopFiles.stream().map(Path::toString).collect(
@@ -456,23 +475,18 @@ public class LinuxHelper {
 
                 String desktopFileName = queryMimeTypeDefaultHandler(mimeType);
 
-                Path desktopFile = getSystemDesktopFilesFolder().resolve(
+                Path systemDesktopFile = getSystemDesktopFilesFolder().resolve(
+                        desktopFileName);
+                Path appDesktopFile = cmd.appLayout().destktopIntegrationDirectory().resolve(
                         desktopFileName);
 
-                TKit.assertFileExists(desktopFile);
+                TKit.assertFileExists(systemDesktopFile);
+                TKit.assertFileExists(appDesktopFile);
 
-                TKit.trace(String.format("Reading [%s] file...", desktopFile));
-                String mimeHandler = Files.readAllLines(desktopFile).stream().peek(
-                        v -> TKit.trace(v)).filter(
-                                v -> v.startsWith("Exec=")).map(
-                                v -> v.split("=", 2)[1]).findFirst().orElseThrow();
-
-                TKit.trace(String.format("Done"));
-
-                TKit.assertEquals(cmd.appLauncherPath().toString(),
-                        mimeHandler, String.format(
-                                "Check mime type handler is the main application launcher"));
-
+                TKit.assertStringListEquals(Files.readAllLines(appDesktopFile),
+                        Files.readAllLines(systemDesktopFile), String.format(
+                        "Check [%s] file is a copy of [%s] file",
+                        systemDesktopFile, appDesktopFile));
             });
         });
 
