@@ -54,15 +54,13 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-\
-                    label">A</span>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                """);
     }
 
     @Test
@@ -73,15 +71,13 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> interface </span><span class="element-name type-n\
-                    ame-label">A</span>""");
+                <div class="type-signature"><span class="modifiers">public sealed interface </span><span class="element-name type-name-label">A</span></div>
+                """);
     }
 
     @Test
@@ -93,21 +89,18 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-\
-                    label">A</span>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                """);
 
         checkOutput("p/B.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public non-sealed<sup><a hre\
-                    f="#preview-p.B">PREVIEW</a></sup> class </span><span class="element-name type-n\
-                    ame-label">B</span>""");
+                <div class="type-signature"><span class="modifiers">public non-sealed class </span><span class="element-name type-name-label">B</span>
+                """);
     }
 
     @Test
@@ -119,21 +112,19 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> interface </span><span class="element-name type-n\
-                    ame-label">A</span>""");
+                <div class="type-signature"><span class="modifiers">public sealed interface </span><span class="element-name type-name-label">A</span>
+                """);
 
         checkOutput("p/B.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public non-sealed<sup><a hre\
-                    f="#preview-p.B">PREVIEW</a></sup> interface </span><span class="element-name ty\
-                    pe-name-label">B</span>""");
+                <div class="type-signature"><span class="modifiers">public non-sealed interface </span><span class="element-name type-name-label">B</span><span class="extends-implements">
+                extends <a href="A.html" title="interface in p">A</a></span></div>
+                """);
     }
 
     @Test
@@ -145,21 +136,18 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-\
-                    label">A</span>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                """);
 
         checkOutput("p/B.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public abstract sealed<sup><\
-                    a href="#preview-p.B">PREVIEW</a></sup> class </span><span class="element-name t\
-                    ype-name-label">B</span>""");
+                <div class="type-signature"><span class="modifiers">public abstract sealed class </span><span class="element-name type-name-label">B</span>
+                """);
     }
 
     @Test
@@ -171,21 +159,19 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> interface </span><span class="element-name type-n\
-                    ame-label">A</span>""");
+                <div class="type-signature"><span class="modifiers">public sealed interface </span><span class="element-name type-name-label">A</span>
+                """);
 
         checkOutput("p/B.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.B">PREVIEW</a></sup> interface </span><span class="element-name type-n\
-                    ame-label">B</span>""");
+                <div class="type-signature"><span class="modifiers">public sealed interface </span><span class="element-name type-name-label">B</span><span class="extends-implements">
+                extends <a href="A.html" title="interface in p">A</a></span></div>
+                """);
     }
 
     @Test
@@ -198,19 +184,15 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-\
-                    label">A</span>
-                    <span class="extends-implements">extends java.lang.Object</span>
-                    <span class="permits">permits<sup><a href="#preview-p.A">PREVIEW</a></sup> <a hr\
-                    ef="B.html" title="class in p">B</a><sup><a href="B.html#preview-p.B">PREVIEW</a\
-                    ></sup></span></div>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a></span></div>
+                """);
     }
 
     @Test
@@ -225,21 +207,15 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-\
-                    label">A</span>
-                    <span class="extends-implements">extends java.lang.Object</span>
-                    <span class="permits">permits<sup><a href="#preview-p.A">PREVIEW</a></sup> <a hr\
-                    ef="B.html" title="class in p">B</a><sup><a href="B.html#preview-p.B">PREVIEW</a\
-                    ></sup>, <a href="C.html" title="class in p">C</a><sup><a href="C.html#preview-p\
-                    .C">PREVIEW</a></sup>, <a href="D.html" title="class in p">D</a><sup><a href="D.\
-                    html#preview-p.D">PREVIEW</a></sup></span></div>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a>, <a href="D.html" title="class in p">D</a></span></div>
+                """);
     }
 
     @Test
@@ -254,24 +230,18 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-\
-                    label">A</span>
-                    <span class="extends-implements">extends java.lang.Object</span>
-                    <span class="permits">permits<sup><a href="#preview-p.A">PREVIEW</a></sup> <a hr\
-                    ef="B.html" title="class in p">B</a><sup><a href="B.html#preview-p.B">PREVIEW</a\
-                    ></sup>, <a href="C.html" title="class in p">C</a><sup><a href="C.html#preview-p\
-                    .C">PREVIEW</a></sup> <span class="permits-note">(not exhaustive)</span></span><\
-                    /div>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a> <span class="permits-note">(not exhaustive)</span></span></div>
+                """);
     }
 
-    // @Test // javac incorrectly rejects the source
+    @Test
     public void testPartialMultiplePermitsWithSubtypes1(Path base) throws IOException {
         Path src = base.resolve("src");
         tb.writeJavaFiles(src,
@@ -284,20 +254,16 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
+                "--no-platform-links",
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview">PREVIEW</a></sup> class </span><span class="element-name type-name-labe\
-                    l">A</span>
-                    <span class="extends-implements">extends java.lang.Object</span>
-                    <span class="permits">permits<sup><a href="#preview">PREVIEW</a></sup> <a href="\
-                    A.B.html" title="class in p">A.B</a><sup><a href="B.html#preview">PREVIEW</a></s\
-                    up>, <a href="A.C.html" title="class in p">A.C</a><sup><a href="C.html#preview">\
-                    PREVIEW</a></sup>, <a href="A.D.html" title="class in p">A.D</a></span></div>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a> <span class="permits-note">(not exhaustive)</span></span></div>
+                """);
     }
 
     @Test
@@ -314,20 +280,15 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#prev\
-                iew-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-label">A\
-                </span>
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
                 <span class="extends-implements">extends java.lang.Object</span>
-                <span class="permits">permits<sup><a href="#preview-p.A">PREVIEW</a></sup> <a href="\
-                B.html" title="class in p">B</a><sup><a href="B.html#preview-p.B">PREVIEW</a></sup>,\
-                 <a href="C.html" title="class in p">C</a><sup><a href="C.html#preview-p.C">PREVIEW<\
-                /a></sup> <span class="permits-note">(not exhaustive)</span></span></div>""");
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a> <span class="permits-note">(not exhaustive)</span></span></div>
+                """);
     }
 
     @Test
@@ -343,21 +304,15 @@ public class TestSealedTypes extends JavadocTester {
                 "--source-path", src.toString(),
                 "--no-platform-links",
                 "-package",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-\
-                    label">A</span>
-                    <span class="extends-implements">extends java.lang.Object</span>
-                    <span class="permits">permits<sup><a href="#preview-p.A">PREVIEW</a></sup> <a hr\
-                    ef="B.html" title="class in p">B</a><sup><a href="B.html#preview-p.B">PREVIEW</a\
-                    ></sup>, <a href="C.html" title="class in p">C</a><sup><a href="C.html#preview-p\
-                    .C">PREVIEW</a></sup>, <a href="D.html" title="class in p">D</a><sup><a href="D.\
-                    html#preview-p.D">PREVIEW</a></sup></span></div>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a>, <a href="D.html" title="class in p">D</a></span></div>
+                """);
     }
 
     @Test
@@ -373,20 +328,14 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
                 """
-                    <div class="type-signature"><span class="modifiers">public sealed<sup><a href="#\
-                    preview-p.A">PREVIEW</a></sup> class </span><span class="element-name type-name-\
-                    label">A</span>
-                    <span class="extends-implements">extends java.lang.Object</span>
-                    <span class="permits">permits<sup><a href="#preview-p.A">PREVIEW</a></sup> <a hr\
-                    ef="A.B.html" title="class in p">A.B</a><sup><a href="A.B.html#preview-p.A.B">PR\
-                    EVIEW</a></sup>, <a href="A.C.html" title="class in p">A.C</a><sup><a href="A.C.\
-                    html#preview-p.A.C">PREVIEW</a></sup>, <a href="A.D.html" title="class in p">A.D\
-                    </a><sup><a href="A.D.html#preview-p.A.D">PREVIEW</a></sup></span></div>""");
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="A.B.html" title="class in p">A.B</a>, <a href="A.C.html" title="class in p">A.C</a>, <a href="A.D.html" title="class in p">A.D</a></span></div>
+                """);
     }
 }
